--- a/mail.html
+++ b/mail.html
@@ -1,45 +1,26 @@
-[2025-05-11 13:40:17] local.DEBUG: From: Laravel <hello@example.com>
-To: wassim.yezeiph@student.odisee.be
-Subject: Your Peer Assessment Tool Account
+[2025-06-14 22:32:22] local.DEBUG: From: Laravel <hello@example.com>
+To: cheechung.lum@student.odisee.be
+Subject: Reset Password Notification
 MIME-Version: 1.0
-Date: Sun, 11 May 2025 13:40:17 +0000
-Message-ID: <4a9da2907276f473d4746f4fbcef89d6@example.com>
-Content-Type: text/html; charset=utf-8
+Date: Sat, 14 Jun 2025 22:32:22 +0000
+Message-ID: <caa31f6a2af9f0f3947a43bc1c6f20c5@example.com>
+Content-Type: multipart/alternative; boundary=hNND7l9O
+
+--hNND7l9O
+Content-Type: text/plain; charset=utf-8
 Content-Transfer-Encoding: quoted-printable
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Your Peer Assessment Tool Account</title>
-</head>
-<body style="margin: 0; padding: 0; font-family: Arial, sans-serif; background-color: #f9f9f9; color: #333333;">
-    <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #f9f9f9; padding: 20px 0;">
-        <tr>
-            <td align="center">
-                <table width="600" cellpadding="0" cellspacing="0" border="0" style="background-color: #ffffff; padding: 30px; border: 1px solid #dddddd; border-radius: 6px;">
-                    <tr>
-                        <td style="font-size: 16px; line-height: 1.6;">
-                            <p style="margin-bottom: 20px;">We are excited to inform you that your account for the <strong>Peer Assessment Tool</strong> has been successfully created!</p>
+Laravel: http://127.0.0.1:8000
 
-                            <p style="margin-bottom: 10px;">Here are your account details:</p>
-                            <ul style="padding-left: 20px; margin-bottom: 20px;">
-                                <li style="margin-bottom: 10px;"><strong>Password:</strong> 18ozweGHhEov</li>
-                            </ul>
+# Hello!
 
-                            <p style="margin-bottom: 20px;">Please log in with these credentials. We recommend that you change your password after logging in for added security.</p>
+You are receiving this email because we received a password reset request for your account.
 
-                            <p style="margin-bottom: 20px;">To log in, simply visit the <a href="#" style="color: #1a73e8; text-decoration: none;">Peer Assessment Tool login page</a> and use your email and password.</p>
+Reset Password: http://127.0.0.1:8000/reset-password/3836dcb4a9f9ad6f37d8725e55e1986b2659ac9a0f6555f6d2338fc65b895adb?email=cheechung.lum%40student.odisee.be
 
-                            <p style="margin-bottom: 20px;">If you did not create this account or have any issues, please contact support.</p>
+This password reset link will expire in 60 minutes.
 
-                            <p style="margin-top: 30px;">Best regards, <br> <strong>The Peer Assessment Tool Team</strong></p>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-</body>
-</html>
-  
+If you did not request a password reset, no further action is required.
+
+Regards,
+Laravel
